crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_ancestors__coffee_definitions.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
assertion_line: 1150
expression: bundle
---
{
  "request": {
    "id": "<UUID>",
    "uri": "<BOOK>/examples/coffee-machine/definitions.sysml"
  },
  "response": [
    {
      "id": "<UUID>",
      "kind": "Package",
      "name": "Definitions",
      "name_span": {
        "col": 8,
        "end": 143,
        "file":"<FILE>",
        "line": 4,
        "start": 132
      },
      "owner": null,
      "spans": [
        {
          "col": 0,
          "end": 2140,
          "file":"<FILE>",
          "line": 4,
          "start": 124
        }
      ]
    }
  ]
}
