crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_ancestors__coffee_views.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
assertion_line: 1150
expression: bundle
---
{
  "request": {
    "id": "<UUID>",
    "uri": "<BOOK>/examples/coffee-machine/views.sysml"
  },
  "response": [
    {
      "id": "<UUID>",
      "kind": "Package",
      "name": "Views",
      "name_span": {
        "col": 8,
        "end": 782,
        "file":"<FILE>",
        "line": 16,
        "start": 777
      },
      "owner": null,
      "spans": [
        {
          "col": 0,
          "end": 7191,
          "file":"<FILE>",
          "line": 16,
          "start": 769
        }
      ]
    }
  ]
}
