crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_ancestors__espresso_pump.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
assertion_line: 1150
expression: bundle
---
{
  "request": {
    "id": "<UUID>",
    "uri": "<WS>/examples/espresso-pump-hybrid/Physics/PumpODE.sysml"
  },
  "response": [
    {
      "id": "<UUID>",
      "kind": "ActionDefinition",
      "name": "PumpFieldDynamics",
      "name_span": {
        "col": 19,
        "end": 5167,
        "file":"<FILE>",
        "line": 80,
        "start": 5150
      },
      "owner": "<UUID>",
      "owning_membership": "<UUID>",
      "spans": [
        {
          "col": 8,
          "end": 7163,
          "file":"<FILE>",
          "line": 80,
          "start": 5139
        }
      ]
    },
    {
      "id": "<UUID>",
      "kind": "Package",
      "name": "PumpDynamics",
      "name_span": {
        "col": 8,
        "end": 20,
        "file":"<FILE>",
        "line": 1,
        "start": 8
      },
      "owner": null,
      "spans": [
        {
          "col": 0,
          "end": 7171,
          "file":"<FILE>",
          "line": 1,
          "start": 0
        }
      ]
    },
    {
      "id": "<UUID>",
      "kind": "PartDefinition",
      "name": "ReciprocatingPump",
      "name_span": {
        "col": 13,
        "end": 2438,
        "file":"<FILE>",
        "line": 41,
        "start": 2421
      },
      "owner": "<UUID>",
      "owning_membership": "<UUID>",
      "spans": [
        {
          "col": 4,
          "end": 7169,
          "file":"<FILE>",
          "line": 41,
          "start": 2412
        }
      ]
    }
  ]
}
